# ConsoleKit2

./: .gitignore  AUTHORS  HACKING  Makefile.am  Makefile.in  NEWS  README  TODO  acinclude.m4  aclocal.m4  autogen.sh  config.h.in  config.rpath  configure  configure.ac  index.html  intltool-extract.in  intltool-merge.in  params.json
.tx/: config
data/: .gitignore  00-primary.seat  90-consolekit.in  90consolekit  ConsoleKit.conf  ConsoleKit.in  ConsoleKit.policy  Makefile.am  Makefile.in  ck-log-system-restart  ck-log-system-start  ck-log-system-stop  console-kit-daemon.service.in  console-kit-log-system-restart.service.in  console-kit-log-system-start.service.in  console-kit-log-system-stop.service.in  consolekit.logrotate  consolekit.logrotate.in  org.freedesktop.ConsoleKit.service.in  org.freedesktop.consolekit.policy
doc/: .gitignore  ConsoleKit.html  ConsoleKit.xml.in  Makefile.am  ck-dbus-manager.xml  ck-dbus-seat.xml  ck-dbus-session.xml  ck-history.1  ck-introduction.xml  ck-launch-session.1  ck-list-sessions.1  console-kit-daemon.1m  console-kit-daemon.1m.in  dbus-introspect-docs.dtd  docbook-dbus.xsl  docbook.css  docize-dbus-xml.sh  ref-ck-manager.xml  ref-ck-seat.xml  ref-ck-session.xml
doc/dbus/: .gitignore  ConsoleKit.xml.in  Makefile.am  ck-design.xml  ck-introduction.xml  spec-to-docbook.xsl
doc/libconsolekit/: Makefile.am  libconsolekit-docs.xml  libconsolekit-sections.txt  libconsolekit.types
doc/spec/: ck-manager.xml  ck-seat.xml  ck-session.xml
doc/tools/: spec-strip-docs  spec-strip-docs.xsl  spec-to-docbook  spec-to-docbook.xsl  update-from-spec
doc/xml/: Makefile.am  ck-design.xml  ck-introduction.xml  ck-terms.xml  ref-ck-manager.xml  ref-ck-seat.xml  ref-ck-session.xml
libck-connector/: .gitignore  Makefile.am  ck-connector.c  ck-connector.h  ck-connector.pc.in  test-connector.c
libconsolekit/: Makefile.am  libconsolekit.c  libconsolekit.h  libconsolekit.pc.in  sd-compat.c  sd-login.h  test-libconsolekit.c
m4/: xdt-depends.m4  xdt-features.m4
pam-ck-connector/: .gitignore  Makefile.am  pam-ck-connector.c  pam_ck_connector.8  test-pam.c
po/: ConsoleKit2.pot  LINGUAS  Makevars  POTFILES.in  bg.po  de.po  es.po  es_419.po  fr.po  nl.po  ru.po
src/: .gitignore  Makefile.am  Makefile.in  ck-debug.c  ck-debug.h  ck-device-none.c  ck-device-udev.c  ck-device.h  ck-event-logger.c  ck-event-logger.h  ck-file-monitor-dummy.c  ck-file-monitor-inotify.c  ck-file-monitor.h  ck-inhibit-manager.c  ck-inhibit-manager.h  ck-inhibit.c  ck-inhibit.h  ck-job.c  ck-job.h  ck-log-event.c  ck-log-event.h  ck-log.c  ck-log.h  ck-manager-glue.h  ck-manager.c  ck-manager.h  ck-manager.xml  ck-marshal.c  ck-marshal.h  ck-marshal.list  ck-process-group.c  ck-process-group.h  ck-run-programs.c  ck-run-programs.h  ck-seat-glue.h  ck-seat.c  ck-seat.h  ck-seat.xml  ck-session-glue.h  ck-session-leader.c  (+40 more)
tools/: .gitignore  70-udev-acl.rules.in  71-udev-seat.rules.in  73-udev-seat-late.rules.in  Makefile.am  Makefile.in  ck-collect-session-info.c  ck-get-x11-display-device.c  ck-get-x11-server-pid.c  ck-history.c  ck-launch-session.c  ck-log-system-restart.c  ck-log-system-start.c  ck-log-system-stop.c  ck-remove-directory.c  list-consoles.c  list-sessions.c  pam-foreground-compat.ck.in  udev-acl.c
tools/freebsd/: Makefile.am  ck-get-x11-display-device  ck-get-x11-server-pid  ck-system-hibernate  ck-system-stop  ck-system-suspend
tools/linux/: .gitignore  Makefile.am  ck-collect-session-info.c  ck-get-x11-display-device.c  ck-get-x11-server-pid.c  ck-system-hibernate  ck-system-hybridsleep  ck-system-restart  ck-system-stop  ck-system-suspend
tools/netbsd/: Makefile.am  ck-system-stop  ck-system-suspend
tools/openbsd/: Makefile.am  ck-system-hibernate  ck-system-hybridsleep  ck-system-restart  ck-system-stop  ck-system-suspend
tools/solaris/: Makefile.am  ck-system-hibernate  ck-system-restart  ck-system-stop
